feat: implement election, treaty, and global event management modules with supporting controllers and repository services.